--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: "make -j"
       - run:
           name: "Test"
-          command: "ctest . -j"
+          command: "ctest . -j $(nproc)"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
