--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,14 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: circleci/buildpack-deps:bullseye-browsers-legacy
+      - image: cimg/base:2022.12
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
+      - run:
+          name: "update"
+          command: "sudo apt update"
       - run:
           name: "Install deps"
           command: "sudo apt install -y cmake googletest libgtest-dev"
